--- a/P5/Regresion.ipynb
+++ b/P5/Regresion.ipynb
@@ -19,7 +19,8 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "\n",
-    "from sklearn.feature_selection import r_regression"
+    "from sklearn.feature_selection import r_regression\n",
+    "from sklearn.metrics import mean_squared_log_error, mean_squared_error, mean_absolute_error"
    ]
   },
   {
@@ -403,6 +404,22 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "44dc31a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultado_R = []\n",
+    "resultado_R2 = []\n",
+    "resultado_SSE = []\n",
+    "resultado_MAE = []\n",
+    "resultado_MSE = []\n",
+    "resultado_RMSE = []\n",
+    "resultado_RMSLE = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "df1651d8",
    "metadata": {},
    "outputs": [
@@ -413,22 +430,9 @@
       "C:\\Users\\nitus\\anaconda3\\envs\\py39_pandas\\lib\\site-packages\\sklearn\\utils\\validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "C:\\Users\\nitus\\anaconda3\\envs\\py39_pandas\\lib\\site-packages\\sklearn\\linear_model\\_quantile.py:186: FutureWarning: The default solver will change from 'interior-point' to 'highs' in version 1.4. Set `solver='highs'` or to the desired solver to silence this warning.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.72389269]\n",
-      "[0.99360922]\n",
-      "[0.99747013]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  warnings.warn(\n",
+      "C:\\Users\\nitus\\anaconda3\\envs\\py39_pandas\\lib\\site-packages\\sklearn\\utils\\validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
       "C:\\Users\\nitus\\anaconda3\\envs\\py39_pandas\\lib\\site-packages\\sklearn\\utils\\validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
@@ -441,38 +445,230 @@
     "for nombre,modelo in modelos:\n",
     "    modelo.fit(X_train,y_train)\n",
     "    y_pred = modelo.predict(X_test)\n",
-    "    print(r_regression(y_test,y_pred))"
+    "    sse = ((y_test - y_pred)**2).sum\n",
+    "    try:\n",
+    "        RMSLE = mean_squared_log_error(y_test,y_pred,squared=False)\n",
+    "    except:\n",
+    "        RMSLE = 1.0\n",
+    "    \n",
+    "    #R (Pearson correlation coefficient)\n",
+    "    resultado_R.append((nombre,r_regression(y_test,y_pred)))\n",
+    "    #R2 (coefficient of determination)\n",
+    "    resultado_R2.append((nombre,r_regression(y_test,y_pred)**2))\n",
+    "    #SSE (sum of squared errors)\n",
+    "    resultado_SSE.append((nombre,np.sum((y_test-y_pred)**2)))\n",
+    "    #MAE (mean absolute error)\n",
+    "    resultado_MAE.append((nombre,mean_absolute_error(y_test,y_pred)))\n",
+    "    #MSE (mean squared error)\n",
+    "    resultado_MSE.append((nombre,mean_squared_error(y_test,y_pred)))\n",
+    "    resultado_RMSE.append((nombre,mean_squared_error(y_test,y_pred,squared=False)))\n",
+    "    resultado_RMSLE.append((nombre,RMSLE))\n",
+    "\n",
+    "resultado_R.sort(key=lambda k:k[1], reverse=True)\n",
+    "resultado_R2.sort(key=lambda k:k[1], reverse=True)\n",
+    "#resultado_SSE.sort(key=lambda k:k[1], reverse=True)\n",
+    "resultado_MAE.sort(key=lambda k:k[1], reverse=True)\n",
+    "resultado_MSE.sort(key=lambda k:k[1], reverse=True)\n",
+    "resultado_RMSE.sort(key=lambda k:k[1], reverse=True)\n",
+    "resultado_RMSLE.sort(key=lambda k:k[1], reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3c8c61fb",
+   "execution_count": 13,
+   "id": "e6f955c8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 5] [2, 5]\n",
-      "[2, 5] [7, 0]\n"
+      "R (Pearson correlation coefficient)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('KNN', array([0.9948544])),\n",
+       " ('Decision Tree', array([0.98242552])),\n",
+       " ('QR', array([0.74718381]))]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"R (Pearson correlation coefficient)\")\n",
+    "resultado_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "23f23380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 (coefficient of determination)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('KNN', array([0.98973528])),\n",
+       " ('Decision Tree', array([0.96515991])),\n",
+       " ('QR', array([0.55828365]))]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"R2 (coefficient of determination)\")\n",
+    "resultado_R2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ff3d4595",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SSE (sum of squared errors)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'rsultado_SSE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSSE (sum of squared errors)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mrsultado_SSE\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rsultado_SSE' is not defined"
      ]
     }
    ],
    "source": [
-    "X = [1,2,3,4,5]\n",
-    "y = [1,2,3,4,5]\n",
-    "y2 = [6,7,8,9,0]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.40, random_state=42)\n",
-    "print(X_test, y_test)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y2, test_size=0.40, random_state=42)\n",
-    "print(X_test, y_test)"
+    "print(\"SSE (sum of squared errors)\")\n",
+    "resultado_SSE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "548ad848",
+   "id": "291c2a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"MAE (mean absolute error)\")\n",
+    "resultado_MAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5808b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"MSE (mean squared error)\")\n",
+    "resultado_MSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f67faa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"RMSE (root mean squared error)\")\n",
+    "resultado_RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c68bc43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"RMSLE (Root Mean Squared Logaritmic Error)\")\n",
+    "resultado_RMSLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25d9d95f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultado_R.clear()\n",
+    "resultado_R2.clear()\n",
+    "resultado_SSE.clear()\n",
+    "resultado_MAE.clear()\n",
+    "resultado_MSE.clear()\n",
+    "resultado_RMSE.clear()\n",
+    "resultado_RMSLE.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8c61fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = y_test - y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5af91f22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sq_diff = diff ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1cdfab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SSE = np.sum(sq_diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e26d58e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eda7842",
    "metadata": {},
    "outputs": [],
    "source": []
