--- a/P5/Regresion.ipynb
+++ b/P5/Regresion.ipynb
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "44dc31a6",
+   "id": "0eb7afea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e6f955c8",
+   "id": "36ef885c",
    "metadata": {},
    "outputs": [
     {
@@ -489,9 +489,9 @@
     {
      "data": {
       "text/plain": [
-       "[('KNN', array([0.9948544])),\n",
-       " ('Decision Tree', array([0.98242552])),\n",
-       " ('QR', array([0.74718381]))]"
+       "[('KNN', array([0.99492462])),\n",
+       " ('Decision Tree', array([0.99051192])),\n",
+       " ('QR', array([0.76195903]))]"
       ]
      },
      "execution_count": 13,
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "23f23380",
+   "id": "323a62d8",
    "metadata": {},
    "outputs": [
     {
@@ -520,9 +520,9 @@
     {
      "data": {
       "text/plain": [
-       "[('KNN', array([0.98973528])),\n",
-       " ('Decision Tree', array([0.96515991])),\n",
-       " ('QR', array([0.55828365]))]"
+       "[('KNN', array([0.989875])),\n",
+       " ('Decision Tree', array([0.98111386])),\n",
+       " ('QR', array([0.58058157]))]"
       ]
      },
      "execution_count": 14,
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ff3d4595",
+   "id": "0117df71",
    "metadata": {},
    "outputs": [
     {
@@ -549,15 +549,16 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'rsultado_SSE' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSSE (sum of squared errors)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mrsultado_SSE\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'rsultado_SSE' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[('QR', 369532.2782280231),\n",
+       " ('Decision Tree', 484604.36541516613),\n",
+       " ('KNN', 5.327679923917815)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -567,10 +568,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "291c2a6a",
+   "execution_count": 16,
+   "id": "5a5517f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE (mean absolute error)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('QR', 0.5466491401268222),\n",
+       " ('Decision Tree', 0.07764868236580846),\n",
+       " ('KNN', 0.05286513309613191)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"MAE (mean absolute error)\")\n",
     "resultado_MAE"
@@ -578,10 +599,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d5808b03",
+   "execution_count": 17,
+   "id": "a4254902",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE (mean squared error)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('QR', 0.43530032287055614),\n",
+       " ('Decision Tree', 0.02026052626035389),\n",
+       " ('KNN', 0.011099333174828781)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"MSE (mean squared error)\")\n",
     "resultado_MSE"
@@ -589,10 +630,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26f67faa",
+   "execution_count": 18,
+   "id": "085c01f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE (root mean squared error)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('QR', 0.6597729328114),\n",
+       " ('Decision Tree', 0.1423394754112642),\n",
+       " ('KNN', 0.10535337286878281)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"RMSE (root mean squared error)\")\n",
     "resultado_RMSE"
@@ -600,10 +661,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c68bc43",
+   "execution_count": 19,
+   "id": "23384f7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE (Root Mean Squared Logaritmic Error)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('QR', 1.0), ('Decision Tree', 1.0), ('KNN', 1.0)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"RMSLE (Root Mean Squared Logaritmic Error)\")\n",
     "resultado_RMSLE"
@@ -611,8 +690,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25d9d95f",
+   "execution_count": 20,
+   "id": "c868d1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,48 +706,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3c8c61fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff = y_test - y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5af91f22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sq_diff = diff ** 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1cdfab9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SSE = np.sum(sq_diff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e26d58e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SSE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4eda7842",
    "metadata": {},
    "outputs": [],
    "source": []
